%TypedArray%#slice shouldn't care about source buffer detachment if there's nothing to copy https://bugs.webkit.org/show_bug.cgi?id=219451

Reviewed by Yusuke Suzuki.

JSTests:

* test262/expectations.yaml:
Mark four test cases as passing.

Source/JavaScriptCore:

From https://tc39.es/ecma262/#sec-%typedarray%.prototype.slice:
  13. Let A be ? TypedArraySpeciesCreate(O, « 𝔽(count) »).
  14. If count > 0, then
    a. If IsDetachedBuffer(O.[[ViewedArrayBuffer]]) is true, throw a TypeError exception.
    ...
  15. Return A.

We had step 14.a raised above 14; this patch fixes the ordering.

* runtime/JSGenericTypedArrayViewPrototypeFunctions.h:
(JSC::genericTypedArrayViewProtoFuncSlice):


Canonical link: https://commits.webkit.org/232059@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@270371 268f45cc-cd09-0410-ab3c-d52691b4dbfc